name:               danielpancake-website
version:            0.1.0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , hakyll-sass
                  , containers
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
